# GraphVisualizer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_docx.py  build_proposal_docx.py  build_thesis.js  figure_manifest.json  fix_quotes.py  make_figures.py  model_comparison.csv  references.bib  references.md  render_code_pngs.py  verify_models.py  verify_rgg.py  写作模板速查表.md  基于Qt的图算法可视化系统设计与实现.docx  基于Qt的图算法可视化系统设计与实现_重构.docx  开题报告.md  论文_重构稿.md
screenshots/: 01_ER.json  02_RGG.json  03_BA.json  04_WS.json
src/: algorithmbase.cpp  algorithmbase.h  algorithms.cpp  algorithms.h  comparewindow.cpp  comparewindow.h  edgeitem.cpp  edgeitem.h  graph.cpp  graph.h  graphgenerator.cpp  graphgenerator.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  randomgraphdialog.cpp  randomgraphdialog.h  vertexitem.cpp  vertexitem.h
